--- a/roles/iac_panos/tasks/object_tags.yml
+++ b/roles/iac_panos/tasks/object_tags.yml
@@ -12,30 +12,30 @@
       api_key: '{{ api_key }}'
 
     create_tags:
-      - tag_name: "SECNET_MGT"
+      - tag_name: "SECNET-MGT"
         tag_color: "purple"
-        tag_comments: "SECNET_MGT"
-      - tag_name: "SECNET_DMZ"
+        tag_comments: "SECNET-MGT"
+      - tag_name: "SECNET-DMZ"
         tag_color: "purple"
-        tag_comments: "SECNET_DMZ"
-      - tag_name: "SECNET_AAA"
+        tag_comments: "SECNET-DMZ"
+      - tag_name: "SECNET-AAA"
         tag_color: "purple"
-        tag_comments: "SECNET_AAA"
-      - tag_name: "SECNET_SEC"
+        tag_comments: "SECNET-AAA"
+      - tag_name: "SECNET-SEC"
         tag_color: "purple"
-        tag_comments: "SECNET_SEC"
-      - tag_name: "SECNET_SRV"
+        tag_comments: "SECNET-SEC"
+      - tag_name: "SECNET-SRV"
         tag_color: "purple"
-        tag_comments: "SECNET_SRV"
-      - tag_name: "SECNET_VRT"
+        tag_comments: "SECNET-SRV"
+      - tag_name: "SECNET-VRT"
         tag_color: "purple"
-        tag_comments: "SECNET_VRT"
-      - tag_name: "SECNET_ADM"
+        tag_comments: "SECNET-VRT"
+      - tag_name: "SECNET-ADM"
         tag_color: "purple"
-        tag_comments: "SECNET_ADM"
-      - tag_name: "SECNET_USR"
+        tag_comments: "SECNET-ADM"
+      - tag_name: "SECNET-USR"
         tag_color: "purple"
-        tag_comments: "SECNET_USR"
+        tag_comments: "SECNET-USR"
 
       - tag_name: "Unauthorized Traffic"
         tag_color: "red"
@@ -53,9 +53,9 @@
         tag_color: "red"
         tag_comments: "WAN"
 
-      - tag_name: "Firewall"
-        tag_color: "green"
-        tag_comments: "Firewall"
+      - tag_name: "Firewall Services"
+        tag_color: "blue"
+        tag_comments: "Firewall Services"
 
   tasks:
     - name: Import Credentials from File
