--- a/roles/iac_panos/tasks/policy_security.yml
+++ b/roles/iac_panos/tasks/policy_security.yml
@@ -44,7 +44,7 @@
         rule_type: intrazone
         description: 'PA Network Services - WEB-SSL'
         tag_name: ['OUTBOUND']
-        group_tag: 'Firewall'
+        group_tag: 'Firewall Services'
         source_zone: ['WAN']
         source_ip: ['HQFW1 NAT IP']
         #source_user: ['any']
@@ -77,7 +77,7 @@
         rule_type: intrazone
         description: 'PA Network Services - PANOS'
         tag_name: ['OUTBOUND']
-        group_tag: 'Firewall'
+        group_tag: 'Firewall Services'
         source_zone: ['WAN']
         source_ip: ['HQFW1 NAT IP']
         #source_user: ['any']
@@ -110,7 +110,7 @@
         rule_type: intrazone
         description: 'PANOS to DNS'
         tag_name: ['INTERNAL']
-        group_tag: 'Firewall'
+        group_tag: 'Firewall Services'
         source_zone: ['SECNET-SRV']
         source_ip: ['10.0.31.1']
         source_user: ['any']
@@ -143,7 +143,7 @@
         rule_type: intrazone
         description: 'PANOS to NTP'
         tag_name: ['INTERNAL']
-        group_tag: 'Firewall'
+        group_tag: 'Firewall Services'
         source_zone: ['SECNET-SRV']
         source_ip: ['10.0.31.1']
         source_user: ['any']
@@ -176,7 +176,7 @@
         rule_type: intrazone
         description: 'PANOS to PDC - MS-WMI'
         tag_name: ['INTERNAL']
-        group_tag: 'Firewall'
+        group_tag: 'Firewall Services'
         source_zone: ['SECNET-AAA']
         source_ip: ['10.0.31.1']
         source_user: ['any']
