removing services from main.yml

--- a/roles/iac_pki/tasks/main.yml
+++ b/roles/iac_pki/tasks/main.yml
@@ -2,6 +2,6 @@
 
 - import_playbook: create_panos_object_tags.yml
 - import_playbook: create_panos_object_address.yml
-- import_playbook: create_panos_object_services.yml
+#- import_playbook: create_panos_object_services.yml
 
 - import_playbook: create_panos_policy_security.yml
