--- a/playbooks/firewall/old_object_tags.yml
+++ b/playbooks/firewall/old_object_tags.yml
@@ -46,6 +46,9 @@
       - tag_name: "INBOUND"
         tag_color: "red"
         tag_comments: "INBOUND"
+      - tag_name: "EXTERNAL"
+        tag_color: "red"
+        tag_comments: "EXTERNAL"
       - tag_name: "INTERNAL"
         tag_color: "blue"
         tag_comments: "INTERNAL"
