--- a/playbooks/firewall/network_vr.yml
+++ b/playbooks/firewall/network_vr.yml
@@ -24,3 +24,8 @@
         nexthop: '96.231.240.1'
         nexthop_type: ip-address
         interface: ethernet1/1
+
+    - name: Create Virtual Router
+      panos_virtual_router:
+        provider: '{{ provider }}'
+        name: "PROJECT-R"
