--- a/playbooks/firewall/network_vr.yml
+++ b/playbooks/firewall/network_vr.yml
@@ -13,7 +13,7 @@
 
   tasks:
     - name: Import Credentials from File
-      include_vars: '/home/p0001/ansible/fw'
+      include_vars: '/root/secnet-ansible/fw'
       no_log: 'yes'
 
     - name: Create Default Static Route
