--- a/playbooks/firewall/network_interfaces.yml
+++ b/playbooks/firewall/network_interfaces.yml
@@ -53,77 +53,77 @@
         enable_dhcp: "false"
         management_profile: 'Management'
         ip: ["10.0.11.1/24"]
-        zone_name: "Management"
+        zone_name: "MGT"
 
       - name: '{{ aggregate_group_name }}.21'
         tag: "21"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.21.1/24"]
-        zone_name: "VIRT-Management"
+        zone_name: "VRT"
 
       - name: '{{ aggregate_group_name }}.31'
         tag: "31"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.31.1/24"]
-        zone_name: "IDAM-PDC"
+        zone_name: "IDAM"
 
       - name: '{{ aggregate_group_name }}.32'
         tag: "32"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.32.1/24"]
-        zone_name: "IDAM-PKI"
+        zone_name: "IDAM"
 
       - name: '{{ aggregate_group_name }}.33'
         tag: "33"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.33.1/24"]
-        zone_name: "IDAM-NAC"
+        zone_name: "IDAM"
 
       - name: '{{ aggregate_group_name }}.34'
         tag: "34"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.34.1/24"]
-        zone_name: "IDAM-SSO"                
+        zone_name: "IDAM"                
 
       - name: '{{ aggregate_group_name }}.41'
         tag: "41"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.41.1/24"]
-        zone_name: "Security-Logs"
+        zone_name: "SEC"
 
       - name: '{{ aggregate_group_name }}.42'
         tag: "42"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.42.1/24"]
-        zone_name: "Security-VAS"
+        zone_name: "SEC"
 
       - name: '{{ aggregate_group_name }}.43'
         tag: "43"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.43.1/24"]
-        zone_name: "Security-MON"
+        zone_name: "SEC"
 
       - name: '{{ aggregate_group_name }}.44'
         tag: "44"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.44.1/24"]
-        zone_name: "Security-NVR"
+        zone_name: "SEC"
 
       - name: '{{ aggregate_group_name }}.51'
         tag: "51"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.51.1/24"]
-        zone_name: "Servers"
+        zone_name: "SRV"
 
       - name: '{{ aggregate_group_name }}.91'
         tag: "91"
@@ -137,35 +137,35 @@
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.111.1/24"]
-        zone_name: "Endpoint-Users"
+        zone_name: "EPD"
 
       - name: '{{ aggregate_group_name }}.121'
         tag: "121"
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.121.1/24"]
-        zone_name: "Endpoint-Printers"
+        zone_name: "EPD"
 
       - name: '{{ aggregate_group_name }}.131'
         tag: "131"
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.131.1/24"]
-        zone_name: "Endpoint-Phones"
+        zone_name: "EPD"
 
       - name: '{{ aggregate_group_name }}.141'
         tag: "141"
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.141.1/24"]
-        zone_name: "Endpoint-IoT"        
+        zone_name: "EPD"
 
       - name: '{{ aggregate_group_name }}.666'
         tag: "666"
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["192.168.1.1/24"]
-        zone_name: "Guests"   
+        zone_name: "GUESTS"   
 
   tasks:
     - name: Import Credentials from File
