--- a/playbooks/firewall/network_interfaces.yml
+++ b/playbooks/firewall/network_interfaces.yml
@@ -54,6 +54,7 @@
         management_profile: 'Management'
         ip: ["10.0.11.1/24"]
         zone_name: "MGT"
+        comment: "Management"
 
       - name: '{{ aggregate_group_name }}.21'
         tag: "21"
@@ -61,6 +62,7 @@
         management_profile: 'Default'
         ip: ["10.0.21.1/24"]
         zone_name: "VRT"
+        comment: "Virtual Management"
 
       - name: '{{ aggregate_group_name }}.31'
         tag: "31"
@@ -68,6 +70,7 @@
         management_profile: 'Default'
         ip: ["10.0.31.1/24"]
         zone_name: "IDAM"
+        comment: "PDC"
 
       - name: '{{ aggregate_group_name }}.32'
         tag: "32"
@@ -75,6 +78,7 @@
         management_profile: 'Default'
         ip: ["10.0.32.1/24"]
         zone_name: "IDAM"
+        comment: "PKI"
 
       - name: '{{ aggregate_group_name }}.33'
         tag: "33"
@@ -82,13 +86,15 @@
         management_profile: 'Default'
         ip: ["10.0.33.1/24"]
         zone_name: "IDAM"
+        comment: "NAC"
 
       - name: '{{ aggregate_group_name }}.34'
         tag: "34"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.34.1/24"]
-        zone_name: "IDAM"                
+        zone_name: "IDAM"
+        comment: "SSO"
 
       - name: '{{ aggregate_group_name }}.41'
         tag: "41"
@@ -96,6 +102,7 @@
         management_profile: 'Default'
         ip: ["10.0.41.1/24"]
         zone_name: "SEC"
+        comment: "LOG"
 
       - name: '{{ aggregate_group_name }}.42'
         tag: "42"
@@ -103,6 +110,7 @@
         management_profile: 'Default'
         ip: ["10.0.42.1/24"]
         zone_name: "SEC"
+        comment: "VAS"
 
       - name: '{{ aggregate_group_name }}.43'
         tag: "43"
@@ -110,6 +118,7 @@
         management_profile: 'Default'
         ip: ["10.0.43.1/24"]
         zone_name: "SEC"
+        comment: "MON"
 
       - name: '{{ aggregate_group_name }}.44'
         tag: "44"
@@ -117,6 +126,7 @@
         management_profile: 'Default'
         ip: ["10.0.44.1/24"]
         zone_name: "SEC"
+        comment: "NVR"
 
       - name: '{{ aggregate_group_name }}.51'
         tag: "51"
@@ -124,6 +134,7 @@
         management_profile: 'Default'
         ip: ["10.0.51.1/24"]
         zone_name: "SRV"
+        comment: "Servers"
 
       - name: '{{ aggregate_group_name }}.91'
         tag: "91"
@@ -131,6 +142,7 @@
         management_profile: 'Default'
         ip: ["10.0.91.1/24"]
         zone_name: "DMZ"
+        comment: "DMZ"
 
       - name: '{{ aggregate_group_name }}.111'
         tag: "111"
@@ -138,6 +150,7 @@
         management_profile: 'Users'
         ip: ["10.0.111.1/24"]
         zone_name: "EPD"
+        comment: "Users"
 
       - name: '{{ aggregate_group_name }}.121'
         tag: "121"
@@ -145,6 +158,7 @@
         management_profile: 'Users'
         ip: ["10.0.121.1/24"]
         zone_name: "EPD"
+        comment: "Printers"
 
       - name: '{{ aggregate_group_name }}.131'
         tag: "131"
@@ -152,6 +166,7 @@
         management_profile: 'Users'
         ip: ["10.0.131.1/24"]
         zone_name: "EPD"
+        comment: "Phones"
 
       - name: '{{ aggregate_group_name }}.141'
         tag: "141"
@@ -159,13 +174,15 @@
         management_profile: 'Users'
         ip: ["10.0.141.1/24"]
         zone_name: "EPD"
+        comment: "IOT"
 
       - name: '{{ aggregate_group_name }}.666'
         tag: "666"
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["192.168.1.1/24"]
-        zone_name: "GUESTS"   
+        zone_name: "GUESTS"
+        comment: "Guests"
 
   tasks:
     - name: Import Credentials from File
@@ -212,6 +229,7 @@
         zone_name: '{{ item.zone_name }}'
         enable_dhcp: '{{ item.enable_dhcp }}'
         management_profile: '{{ item.management_profile }}'
+        comment: '{{ item.comment }}'
       with_items: '{{ create_vlans }}'
 
     - name: Creating "PROJECT-R" Subinterface
@@ -224,6 +242,7 @@
         enable_dhcp: "false"
         management_profile: 'Users'
         vr_name: "PROJECT-R"
+        comment: "PROJECT-R"
 
     - name: Configuring WAN Interface
       panos_interface:
