Updating several files

--- a/playbooks/firewall/network_interfaces.yml
+++ b/playbooks/firewall/network_interfaces.yml
@@ -53,23 +53,31 @@
         enable_dhcp: "false"
         management_profile: 'Management'
         ip: ["10.0.11.1/24"]
-        zone_name: "MGT"
+        zone_name: "Management"
         comment: "Management"
+
+      - name: '{{ aggregate_group_name }}.15'
+        tag: "15"
+        enable_dhcp: "false"
+        management_profile: 'Management'
+        ip: ["10.0.15.1/24"]
+        zone_name: "Management"
+        comment: "Admins"
 
       - name: '{{ aggregate_group_name }}.21'
         tag: "21"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.21.1/24"]
-        zone_name: "VRT"
-        comment: "Virtual Management"
+        zone_name: "Virtualization"
+        comment: "Management"
 
       - name: '{{ aggregate_group_name }}.31'
         tag: "31"
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.31.1/24"]
-        zone_name: "IDAM"
+        zone_name: "Authentication"
         comment: "PDC"
 
       - name: '{{ aggregate_group_name }}.32'
@@ -77,7 +85,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.32.1/24"]
-        zone_name: "IDAM"
+        zone_name: "Authentication"
         comment: "PKI"
 
       - name: '{{ aggregate_group_name }}.33'
@@ -85,7 +93,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.33.1/24"]
-        zone_name: "IDAM"
+        zone_name: "Authentication"
         comment: "NAC"
 
       - name: '{{ aggregate_group_name }}.34'
@@ -93,7 +101,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.34.1/24"]
-        zone_name: "IDAM"
+        zone_name: "Authentication"
         comment: "SSO"
 
       - name: '{{ aggregate_group_name }}.41'
@@ -101,7 +109,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.41.1/24"]
-        zone_name: "SEC"
+        zone_name: "Security"
         comment: "LOG"
 
       - name: '{{ aggregate_group_name }}.42'
@@ -109,7 +117,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.42.1/24"]
-        zone_name: "SEC"
+        zone_name: "Security"
         comment: "VAS"
 
       - name: '{{ aggregate_group_name }}.43'
@@ -117,7 +125,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.43.1/24"]
-        zone_name: "SEC"
+        zone_name: "Security"
         comment: "MON"
 
       - name: '{{ aggregate_group_name }}.44'
@@ -125,7 +133,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.44.1/24"]
-        zone_name: "SEC"
+        zone_name: "Security"
         comment: "NVR"
 
       - name: '{{ aggregate_group_name }}.51'
@@ -133,23 +141,31 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.51.1/24"]
-        zone_name: "SRV"
+        zone_name: "Servers"
         comment: "Servers"
 
       - name: '{{ aggregate_group_name }}.91'
         tag: "91"
         enable_dhcp: "false"
         management_profile: 'Default'
-        ip: ["10.0.91.1/24"]
+        ip: ["10.0.81.1/24"]
         zone_name: "DMZ"
-        comment: "DMZ"
+        comment: "Frontend"
+
+      - name: '{{ aggregate_group_name }}.95'
+        tag: "95"
+        enable_dhcp: "false"
+        management_profile: 'Default'
+        ip: ["10.0.95.1/24"]
+        zone_name: "DMZ"
+        comment: "Backend"
 
       - name: '{{ aggregate_group_name }}.111'
         tag: "111"
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.111.1/24"]
-        zone_name: "EPD"
+        zone_name: "Endpoints"
         comment: "Users"
 
       - name: '{{ aggregate_group_name }}.121'
@@ -157,7 +173,7 @@
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.121.1/24"]
-        zone_name: "EPD"
+        zone_name: "Endpoints"
         comment: "Printers"
 
       - name: '{{ aggregate_group_name }}.131'
@@ -165,7 +181,7 @@
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.131.1/24"]
-        zone_name: "EPD"
+        zone_name: "Endpoints"
         comment: "Phones"
 
       - name: '{{ aggregate_group_name }}.141'
@@ -173,7 +189,7 @@
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.141.1/24"]
-        zone_name: "EPD"
+        zone_name: "Endpoints"
         comment: "IOT"
 
       - name: '{{ aggregate_group_name }}.666'
@@ -181,7 +197,7 @@
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["192.168.1.1/24"]
-        zone_name: "GUESTS"
+        zone_name: "Guests"
         comment: "Guests"
 
   tasks:
@@ -208,7 +224,7 @@
         provider: '{{ provider }}'
         if_name: '{{ aggregate_group_name }}'
         mode: "layer3"
-        vr_name: "none"
+        vr_name: "default"
         lacp_enable: "true"
         lacp_mode: "active"
 
@@ -232,17 +248,17 @@
         comment: '{{ item.comment }}'
       with_items: '{{ create_vlans }}'
 
-    - name: Creating "PROJECT-R" Subinterface
+    - name: Creating "Project-R" Subinterface
       panos_l3_subinterface:
         provider: '{{ provider }}'
         name: '{{ aggregate_group_name }}.1311'
         tag: "1311"
         ip: ["10.13.11.1/24"]
-        zone_name: "PROJECT-R"
+        zone_name: "Project-R"
         enable_dhcp: "false"
         management_profile: 'Users'
-        vr_name: "PROJECT-R"
-        comment: "PROJECT-R"
+        vr_name: "Project-R"
+        comment: "Project-R"
 
     - name: Configuring WAN Interface
       panos_interface:
