--- a/playbooks/firewall/network_vr.yml
+++ b/playbooks/firewall/network_vr.yml
@@ -16,6 +16,11 @@
       include_vars: '/root/secnet-ansible/fw'
       no_log: 'yes'
 
+    - name: Create Virtual Router
+      panos_virtual_router:
+        provider: '{{ provider }}'
+        name: "Project-R"
+
     - name: Create Default Static Route
       panos_static_route:
         provider: '{{ provider }}'
@@ -24,8 +29,3 @@
         nexthop: '96.231.240.1'
         nexthop_type: ip-address
         interface: ethernet1/1
-
-    - name: Create Virtual Router
-      panos_virtual_router:
-        provider: '{{ provider }}'
-        name: "PROJECT-R"
